# DWNOTools

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-NOTICE
src/: CSVB.cpp  CSVB.hpp  CSVBExporter.cpp  CSVBImporter.cpp  DWNOTools.cpp  utils.cpp  utils.hpp
structures/: AttackData.json  CookingData.json  DigimonData.json  ItemData.json  ItemDataBattle.json  ItemDataDrug.json  ItemDataEvolution.json  ItemDataFood.json  ItemDataKeyItem.json  ItemDataMaterial.json  ItemDataOther.json  ItemDataRecovery.json  ItemDataTraining.json  TownGradeUpData.json  TrainingData.json  lang.json  map.json  structures.json
